[tool.poetry]
name = "morecopy"
version = "0.2.4"
description = "Copy even immutable objects as much as possible"
keywords = ["copy", "deepcopy"]
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/morecopy"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"

[tool.poetry.dev-dependencies]
black = "^21.12b"
ipython = "^7.30"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
