[tool.poetry]
name = "morecopy"
version = "0.3.0"
description = "Copy even immutable objects as much as possible"
keywords = ["copy", "deepcopy"]
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/morecopy/"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
ipython = "^8.12"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
